[package]
name = "aeon-market-scanner-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.28", features = ["json"] }
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"
chrono = "0.4"
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
futures = "0.3"