[package]
name = "aeon-market-scanner-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

description = "CEX/DEX market scanner: fetch prices, stream WebSocket updates, and find arbitrage opportunities."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ihsan215/aeon-market-scanner-rs"
homepage = "https://github.com/ihsan215/aeon-market-scanner-rs"
documentation = "https://docs.rs/aeon-market-scanner-rs"

keywords = ["crypto", "arbitrage", "cex", "dex", "websocket"]
categories = ["api-bindings", "asynchronous", "finance"]

# Keep the published crate lean and explicit.
include = [
    "src/**/*",
    "tests/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[dependencies]
reqwest = { version = "0.12.28", features = ["json"] }
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"
chrono = "0.4"
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
futures = "0.3"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
prost = "0.13"